@@ -3,6 +3,7 @@ package fr.umlv.loom.prez;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.stream.IntStream;
 
+// $JAVA_HOME/bin/java --enable-preview -cp target/loom-1.0-SNAPSHOT.jar  fr.umlv.loom.prez._4_how_many_virtual_thread
 public interface _4_how_many_virtual_thread {
   private static void incrementALot() throws InterruptedException {
     var counter = new AtomicInteger();
